[gd_scene load_steps=7 format=3 uid="uid://42gfe5fwvv5l"]

[ext_resource type="Texture2D" uid="uid://dhyyw3iktb53n" path="res://UI/MatTex/MenuImg0_di.png" id="1_8yw0e"]
[ext_resource type="Script" uid="uid://b440c2xy6fdji" path="res://UI/unit_btn.gd" id="2_a7yet"]
[ext_resource type="LabelSettings" uid="uid://btn5lxtli2g5q" path="res://UI/Fonts/BodyText.tres" id="2_j7o4u"]
[ext_resource type="Texture2D" uid="uid://iq2n0wgccksx" path="res://UI/MatTex/MenuImg2_di.png" id="2_qwcj3"]
[ext_resource type="Texture2D" uid="uid://c2t5sd3pe1fio" path="res://UI/MatTex/MenuImg1_di.png" id="3_h52gf"]
[ext_resource type="Texture2D" uid="uid://d2wnxu5afusyv" path="res://UI/MatTex/MenuImg3_di.png" id="4_h52gf"]

[node name="UnitBtn" type="TextureButton"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1024.0
offset_bottom = -584.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("1_8yw0e")
texture_pressed = ExtResource("2_qwcj3")
texture_hover = ExtResource("3_h52gf")
texture_disabled = ExtResource("4_h52gf")
script = ExtResource("2_a7yet")
Title = "Attack"

[node name="TitleTxt" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -12.0
offset_right = 38.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Attack"
label_settings = ExtResource("2_j7o4u")
horizontal_alignment = 1

[node name="CostTxt" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -17.0
offset_right = -15.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 0
text = "1"
label_settings = ExtResource("2_j7o4u")
horizontal_alignment = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
